--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
-h1, p {
+h1,
+p {
   font-family: Lato;
+  color: red;
+}
+
+p {
+  color: red;
+  font-size: larger;
+  font-style: italic;
+  margin-left: 120px;
+}
+
+input {
+  margin: auto;
+  margin-top: 40px;
+  margin-left: 110px;
+  text-align: center;
 }
